--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background: url(https://pixnio.com/free-images/2017/03/27/2017-03-27-13-57-10.jpg) no-repeat fixed;
+  background: url(pizza.jpg) no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
